# scousepy

./: .gitignore  .gitmodules  .readthedocs.yml  .rtd-environment.yml  CHANGES.rst  LICENSE  LICENSE.rst  README.md  README.rst  pip-requirements  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  description.rst  index.rst  license.rst  make.bat  reqirements.txt  requirements.txt  rtd-pip-requirements  tutorial.rst  tutorial_v1.0.0.rst  tutorial_v2.0.0.rst
docs/_build/dirhtml/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_build/doctrees/: description.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  stats.doctree  tips.doctree  tutorial.doctree  tutorial_v1.0.0.doctree  tutorial_v2.0.0.doctree
docs/_build/html/: .buildinfo  description.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  stats.html  tips.html  tutorial.html  tutorial_v1.0.0.html  tutorial_v2.0.0.html
docs/_build/latex/: scousepy.aux  scousepy.fdb_latexmk  scousepy.fls  scousepy.ilg  scousepy.out  scousepy.tex  scousepy.toc
docs/source/: conf.py  description.rst  index.rst  installation.rst  license.rst  tutorial.rst
examples/: n2h+10_37.fits  run.py  run_iterative.py
scousepy/: SpectralDecomposer.py  __init__.py  base_spectrum.py  best_fitting_solution.py  colors.py  configmaker.py  conftest.py  dspec.py  indiv_spec_description.py  interactiveplot.py  io.py  model_housing.py  model_housing2.py  mplstylefile.mplstyle  noisy.py  parallel_map.py  progressbar.py  saa_description.py  scouse.py  scousecoverage.py  scousefitchecker.py  scousefitter.py  scousefittermanual.py  scouselearn.py  scousespatial.py  solution_description.py  stage_1.py  stage_2.py  stage_3.py  stage_4.py  stage_5.py  stage_6.py  statistics.py  tvregdiff.py  verbose_output.py
tutorials/: example_script.py
(+40 files in other folders)
