[metadata]
name = scousepy
author = Jonathan D. Henshaw
author_email = jonathan.d.henshaw@gmail.com
license = MIT
license_file = LICENSE.rst
url = https://github.com/jdhenshaw/scousepy
description = Multi-component spectral-line fitting package
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = jdhenshaw/scousepy

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    matplotlib
    spectral_cube
    pyspeckit
    lmfit
    tqdm
    extension_helpers


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
scousepy = data/*

[tool:pytest]
testpaths = "scousepy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    scousepy/_astropy_init*
    scousepy/conftest.py
    scousepy/*setup_package*
    scousepy/tests/*
    scousepy/*/tests/*
    scousepy/extern/*
    scousepy/version*
    */scousepy/_astropy_init*
    */scousepy/conftest.py
    */scousepy/*setup_package*
    */scousepy/tests/*
    */scousepy/*/tests/*
    */scousepy/extern/*
    */scousepy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
